# SmartHirink

./: .dockerignore  .env.example  .gitignore  PRODUCTION_PLAN.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/agent/: package.json  tsconfig.json
apps/agent-pipecat/: bot.py  config.py  db.py  interview_processor.py  prompts.py  pyproject.toml  queue_client.py  server.py  transcript_sender.py
apps/agent/src/: config.ts  interview-agent.ts  main.ts
apps/agent/src/adapters/: deepgram-stt.ts  deepgram-tts.ts  gemini-tts.ts  openai-embedding.ts  openai-llm.ts  openai-tts.ts
apps/api/: package.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: config.ts  server.ts
apps/api/src/lib/: audit.ts  authorize.ts  base-repository.ts  email.ts  interview-repository.ts  livekit.ts  llm-parser.ts  pdf-extract.ts  queue.ts  redis.ts
apps/api/src/routes/: audit.ts  auth.ts  candidates.ts  interviews.ts  model-config.ts  scenarios.ts
apps/web/: components.json  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: client-layout.tsx  error.tsx  globals.css  layout.tsx  not-found.tsx  (+1 more)
apps/worker/: package.json  tsconfig.json
apps/worker/src/: evaluation-worker.ts  main.ts  report-worker.ts
docs/: DOCKER_BUILD_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  architecture.md  deployment.md  entity-redesign.md
infra/: Dockerfile.agent  Dockerfile.agent-pipecat  Dockerfile.api  Dockerfile.web  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml  livekit.yaml
(+55 files in other folders)
